<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#494953"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/size_10">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_10"
            android:src="@mipmap/ic_signature_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/customer_signature_title"
            android:textColor="@color/white"
            android:textSize="@dimen/font_20" />

    </LinearLayout>

    <com.sinosafe.xb.manager.widget.ElectronicSignatureView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/size_20"
        android:layout_marginRight="@dimen/size_20"
        android:layout_weight="1"
        android:background="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/size_10">

        <Button
            android:id="@+id/btn_clear_screen"
            style="@style/NormalButton"
            android:layout_marginRight="@dimen/size_30"
            android:text="@string/clear_screen" />

        <Button
            android:id="@+id/btn_confirm"
            style="@style/NormalButton"
            android:layout_marginLeft="@dimen/size_30"
            android:text="@string/confirm" />

    </LinearLayout>

</LinearLayout>
