<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/size_15"
        android:text="@string/prompt"
        android:textColor="@color/main_text_color"
        android:textSize="@dimen/font_18" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:lineSpacingExtra="5dp"
        android:textColor="@color/main_text_color"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/size_10"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/cancelLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|top">

            <Button
                android:id="@+id/btn_cancel"
                style="@style/NormalButton_White"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="@dimen/size_20"
                android:layout_marginRight="@dimen/size_10"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/confirmLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|top">

            <Button
                android:id="@+id/btn_confirm"
                style="@style/NormalButton"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="@dimen/size_20"
                android:layout_marginRight="@dimen/size_20"
                android:layout_weight="1"
                android:text="@string/confirm"
                android:textSize="16dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>